syntax = "proto3";

package paxoskv;
//这个我还是不懂 proto3里面定义的proto

//这里定义的PaxosKV我也不是很懂
service PaxosKV {
    rpc Prepare (Proposer) returns (Acceptor) {}
    rpc Accept (Proposer) returns ()
}

//
message BallotNum {
    int64_t N = 1;
    int64_t ProposerId = 2;
}